# TFM-Pokemon-VGC

./: .gitignore
doc/: bibliografia.bib  proyecto.tex
doc/portada/: portada.tex
doc/prefacios/: prefacio.tex
doc/secciones/: 01_introduccion.tex  02_descripcion.tex  05_metodologia.tex  06_experimentacion.tex  07_discusiones.tex
planning/: Roadmap.md  SprintPlanning.md  developerTasks.md
planning/Sprint 0/: HistoriasUsuario.md  descripcion.md
planning/Sprint 1/: HistoriasUsuario.md  descripcion.md
planning/Sprint 2/: HistoriasUsuario.md  descripcion.md
planning/Sprint 3/: HistoriasUsuario.md  descripcion.md
planning/Sprint 4/: HistoriasUsuario.md  descripcion.md
planning/Sprint 5/: HistoriasUsuario.md  descripcion.md
planning/Sprint 6/: HistoriasUsuario.md  descripcion.md
planning/Sprint 7/: HistoriasUsuario.md  descripcion.md
src/pokevgc/: main.py  pyproject.toml
src/pokevgc/config/: tournament_config_large.yaml  tournament_config_simple.yaml  tournament_config_verbose.yaml
src/pokevgc/scripts/: battle.py  battle_examples.py  battle_logger.py  tournament.py
src/pokevgc/utils/: action_vectorizer.py  state_vectorizer.py
